cluster/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schedule-app
  name: schedule-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: schedule-app
  template:
    metadata:
      labels:
        app: schedule-app
    spec:
      containers:
      - image: jjmmyyou111/schedule-app:latest
        name: schedule-app
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
  labels:
    app: schedule-app
spec:
  ports:
  - nodePort: 32391
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: schedule-app
  type: LoadBalancer
