cluster/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schedule-app
  name: schedule-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-app
  template:
    metadata:
      labels:
        app: schedule-app
    spec:
      containers:
      - image: gcr.io/google-samples/node-hello:1.0
        name: schedule-app
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
  labels:
    app: schedule-app
spec:
  ports:
  - nodePort: 32391
    port: 3000
    protocol: TCP
    targetPort: 8080
  selector:
    app: schedule-app
  type: LoadBalancer
