cluster/schedule-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-app-deployment
  labels:
    app: schedule-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: schedule-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: schedule-app
    spec:
      containers:
      - name: schedule-app
        image: jjmmyyou111/schedule-app:latest  
        ports:
        - containerPort: 3000   
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-app-service
spec:
  selector:
    app: schedule-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
