cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schedule-service
                port:
                  number: 3000
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 8080
